# machine_learning

./: README.md
Criterios/: README.md
Practicas/PIA/: pyproject.toml
Practicas/PIA/pia/: clasification.py  main.py  util_csv_reader.py
Practicas/Practica1/: pyproject.toml
Practicas/Practica1/csv/: analyzed_uanl.csv
Practicas/Practica1/practica1/: data_query.py  main.py
Practicas/Practica1/practica1/analyze/: correlation_analysis.py  dependency_analysis.py  employee_distribution_analysis.py  faculty_vs_preparatory_analysis.py  outlier_analysis.py  salary_analisis_by_building.py  salary_equity_analysis.py  temporal_analysis.py
Practicas/Practica1/practica1/enums/: empleado_columnas_enum.py  tipos_edificios_enum.py
Practicas/Practica1/practica1/utils/: constantes_util.py  util.py
Practicas/Practica2/: pyproject.toml
Practicas/Practica2/practica2/: main.py
Practicas/Practica2/practica2/regression/: asset_regression.py  asset_simple_regression.py
Practicas/Practica2/practica2/utils/: score_regression.py  util.py
Practicas/Practica3/: pyproject.toml
Practicas/Practica3/practica3/: main.py
Practicas/Practica3/practica3/classification/: asset_classification.py
Practicas/Practica3/practica3/utils/: column_assets.py  util.py  (+1 more)
Practicas/Practica4/: pyproject.toml
Practicas/Practica4/practica4/: main.py
notebooks/: 1.data_mining.ipynb  2.regression.ipynb  3.clasificacion.ipynb  4.evaluacion.ipynb  5.clustering.ipynb  data_mining.ipynb  linear_regression.ipynb
trasnformaciones/: 2.amenity_transformation.ktr  airbnb_transformation.ktr
(+2 files in other folders)
