[tool.poetry]
name = "practica1"
version = "0.1.0"
description = ""
authors = ["Armando Alexis Sepúlveda Cruz <armando.sepulvedacrz@banregio.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
tabulate = "^0.9.0"
matplotlib = "^3.9.0"
statsmodels = "^0.14.2"
scikit-learn = "^1.5.0"
lxml = "^5.2.2"
seaborn = "^0.13.2"
scipy = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
