[tool.poetry]
name = "practica2"
version = "0.1.0"
description = ""
authors = ["Armando Alexis Sepúlveda Cruz <armando.sepulvedacrz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
tabulate = "^0.9.0"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"
matplotlib = "^3.9.1"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
